--- a/index.html
+++ b/index.html
@@ -1,510 +1,246 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Miranda Flow Boutique</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Miranda Flow Boutique</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;900&display=swap" rel="stylesheet">
 
-  <style>
-    :root{
-      --bg:#000;
-      --glass: rgba(255,255,255,.06);
-      --glass2: rgba(255,255,255,.10);
-      --txt:#fff;
-      --muted: rgba(255,255,255,.65);
-      --muted2: rgba(255,255,255,.45);
-      --ring: rgba(255,255,255,.18);
-      --shadow: 0 40px 120px rgba(0,0,0,.65);
-      --radius: 26px;
-    }
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  font-family:'Inter',sans-serif;
+  background:#000;
+  color:#fff;
+  overflow-x:hidden;
+}
 
-    *{margin:0;padding:0;box-sizing:border-box}
-    html{scroll-behavior:smooth}
-    body{
-      font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      background: var(--bg);
-      color: var(--txt);
-      overflow-x:hidden;
-    }
+/* ===== HEADER ===== */
+header{
+  position:fixed;
+  top:0;left:0;right:0;
+  height:70px;
+  padding:0 22px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  background:rgba(0,0,0,.55);
+  backdrop-filter:blur(14px);
+  border-bottom:1px solid rgba(255,255,255,.08);
+  z-index:1000;
+}
+.brand{
+  display:flex;
+  align-items:center;
+  gap:12px;
+}
+.brand img{
+  width:36px;
+  border-radius:8px;
+}
+.brand .text{
+  font-size:12px;
+  letter-spacing:3px;
+}
+.brand .text b{
+  display:block;
+  font-size:14px;
+  letter-spacing:4px;
+}
 
-    /* ===== Ambient background ===== */
-    .ambient{
-      position:fixed; inset:0;
-      pointer-events:none;
-      z-index:-2;
-      background:
-        radial-gradient(900px 520px at 12% 18%, rgba(0,255,170,.18), transparent 60%),
-        radial-gradient(880px 560px at 88% 24%, rgba(0,140,255,.22), transparent 60%),
-        radial-gradient(980px 620px at 60% 92%, rgba(140,255,0,.14), transparent 60%),
-        linear-gradient(to bottom, rgba(0,0,0,.2), rgba(0,0,0,.85) 35%, rgba(0,0,0,1));
-      filter:saturate(120%);
-    }
-    .vignette{
-      position:fixed; inset:-40px;
-      pointer-events:none;
-      z-index:-1;
-      background: radial-gradient(circle at 50% 35%, transparent 0 35%, rgba(0,0,0,.85) 70%);
-    }
+nav a{
+  margin-left:22px;
+  text-decoration:none;
+  color:rgba(255,255,255,.7);
+  font-size:12px;
+  letter-spacing:3px;
+}
+nav a:hover{color:#fff}
 
-    /* ===== Top bar ===== */
-    header{
-      position:fixed; top:0; left:0; right:0;
-      padding:16px 22px;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      background:rgba(0,0,0,.55);
-      backdrop-filter: blur(14px);
-      border-bottom: 1px solid rgba(255,255,255,.06);
-      z-index:1000;
-    }
+/* ===== HERO ===== */
+.hero{
+  min-height:100vh;
+  padding:120px 8% 80px;
+  position:relative;
+  display:flex;
+  align-items:center;
+}
+.logo-bg{
+  position:absolute;
+  inset:0;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  opacity:.18;
+}
+.logo-bg img{
+  width:min(900px,90vw);
+  filter:grayscale(100%) contrast(120%);
+}
 
-    .brand{
-      display:flex;
-      align-items:center;
-      gap:12px;
-      min-width: 160px;
-    }
-    .brand img{
-      width:34px; height:34px;
-      border-radius:10px;
-      box-shadow: 0 12px 40px rgba(255,255,255,.08);
-      transform: translateZ(0);
-    }
-    .brand .name{
-      letter-spacing:3px;
-      font-weight:800;
-      font-size:14px;
-      opacity:.95;
-    }
-    .brand .sub{
-      display:block;
-      font-size:11px;
-      letter-spacing:4px;
-      color:var(--muted2);
-      margin-top:2px;
-    }
+.hero-card{
+  position:relative;
+  max-width:720px;
+  background:rgba(255,255,255,.06);
+  border:1px solid rgba(255,255,255,.1);
+  border-radius:28px;
+  padding:48px;
+  backdrop-filter:blur(12px);
+}
+.hero-card small{
+  letter-spacing:4px;
+  color:rgba(255,255,255,.6);
+}
+.hero-card h1{
+  font-size:clamp(46px,6vw,82px);
+  font-weight:900;
+  margin:14px 0;
+}
+.hero-card p{
+  color:rgba(255,255,255,.75);
+  font-size:18px;
+  line-height:1.5;
+}
+.hero-actions{
+  margin-top:26px;
+  display:flex;
+  gap:14px;
+  flex-wrap:wrap;
+}
+.btn{
+  padding:14px 22px;
+  border-radius:14px;
+  font-size:12px;
+  letter-spacing:3px;
+  font-weight:800;
+  text-decoration:none;
+  border:1px solid rgba(255,255,255,.25);
+  color:#fff;
+}
+.btn.primary{
+  background:#fff;
+  color:#000;
+}
+.btn:hover{opacity:.9}
 
-    nav{
-      display:flex;
-      align-items:center;
-      gap:18px;
-    }
-    nav a{
-      text-decoration:none;
-      color:var(--muted);
-      font-size:12px;
-      letter-spacing:3px;
-      padding:10px 12px;
-      border-radius:999px;
-      transition:.25s;
-    }
-    nav a:hover{
-      color:#fff;
-      background: rgba(255,255,255,.06);
-    }
+/* ===== EXCLUSIVE ===== */
+.section{
+  padding:80px 8%;
+}
+.section h2{
+  font-size:34px;
+  letter-spacing:8px;
+  margin-bottom:12px;
+}
+.section p{
+  color:rgba(255,255,255,.6);
+  margin-bottom:32px;
+}
 
-    /* ===== Hero ===== */
-    .hero{
-      min-height: 92vh;
-      padding: 110px 8% 60px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      position:relative;
-    }
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:22px;
+}
+.card{
+  border-radius:22px;
+  overflow:hidden;
+  border:1px solid rgba(255,255,255,.1);
+  background:#111;
+  transform:translateY(30px);
+  opacity:0;
+  filter:blur(6px);
+  transition:.8s ease;
+}
+.card.show{
+  transform:none;
+  opacity:1;
+  filter:none;
+}
+.card img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+}
 
-    /* BIG LOGO BACK */
-    .logo-back{
-      position:absolute;
-      inset:0;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      pointer-events:none;
-      opacity:.20;
-      filter: blur(0.2px);
-    }
-    .logo-back img{
-      width:min(980px, 92vw);
-      opacity:.22;
-      transform: rotate(-4deg) scale(1.06);
-      filter: grayscale(100%) contrast(120%) brightness(120%);
-      mix-blend-mode: screen;
-      animation: drift 7s ease-in-out infinite;
-    }
-    @keyframes drift{
-      0%,100%{ transform: translateY(0) rotate(-4deg) scale(1.06); opacity:.22;}
-      50%{ transform: translateY(-10px) rotate(-3deg) scale(1.08); opacity:.26;}
-    }
-
-    .hero-card{
-      width: min(980px, 100%);
-      border-radius: var(--radius);
-      background: linear-gradient(180deg, rgba(255,255,255,.07), rgba(255,255,255,.03));
-      border: 1px solid rgba(255,255,255,.08);
-      box-shadow: var(--shadow);
-      padding: 44px 34px;
-      position:relative;
-      overflow:hidden;
-    }
-    .hero-card:before{
-      content:"";
-      position:absolute;
-      inset:-2px;
-      background:
-        radial-gradient(600px 220px at 10% 0%, rgba(255,255,255,.12), transparent 60%),
-        radial-gradient(720px 280px at 90% 10%, rgba(255,255,255,.10), transparent 60%);
-      opacity:.65;
-      pointer-events:none;
-    }
-
-    .kicker{
-      letter-spacing:4px;
-      color:var(--muted);
-      font-weight:600;
-      font-size:12px;
-      margin-bottom:14px;
-      position:relative;
-      z-index:2;
-    }
-    h1{
-      font-size: clamp(46px, 7vw, 88px);
-      line-height: .95;
-      font-weight: 900;
-      letter-spacing: 1px;
-      position:relative;
-      z-index:2;
-      text-shadow: 0 18px 60px rgba(0,0,0,.65);
-    }
-    .tag{
-      margin-top:16px;
-      font-size: clamp(16px, 2.2vw, 20px);
-      color: rgba(255,255,255,.78);
-      line-height: 1.5;
-      max-width: 640px;
-      position:relative;
-      z-index:2;
-    }
-
-    .cta{
-      display:flex;
-      gap:14px;
-      flex-wrap:wrap;
-      margin-top: 26px;
-      position:relative;
-      z-index:2;
-    }
-    .btn{
-      border: 1px solid rgba(255,255,255,.20);
-      background: rgba(255,255,255,.06);
-      color:#fff;
-      padding: 14px 18px;
-      border-radius: 14px;
-      letter-spacing:3px;
-      font-size: 12px;
-      font-weight:800;
-      text-decoration:none;
-      display:inline-flex;
-      align-items:center;
-      gap:10px;
-      transition: .25s;
-      user-select:none;
-    }
-    .btn:hover{
-      background: rgba(255,255,255,.12);
-      transform: translateY(-2px);
-    }
-    .btn.primary{
-      background:#fff;
-      color:#000;
-      border-color: rgba(255,255,255,.45);
-    }
-    .btn.primary:hover{
-      background: rgba(255,255,255,.92);
-    }
-
-    /* ===== Floating pills ===== */
-    .pill{
-      position:fixed;
-      right: 18px;
-      display:flex;
-      align-items:center;
-      gap:10px;
-      padding: 12px 16px;
-      border-radius: 999px;
-      background:#fff;
-      color:#000;
-      font-weight:900;
-      letter-spacing:2px;
-      font-size:12px;
-      box-shadow: 0 22px 80px rgba(0,0,0,.55);
-      z-index:999;
-      transform: translateZ(0);
-      animation: float 3.2s ease-in-out infinite;
-      cursor:pointer;
-      user-select:none;
-      text-decoration:none;
-    }
-    .pill small{
-      font-weight:900;
-      opacity:.9;
-    }
-    @keyframes float{
-      0%,100%{ transform: translateY(0); }
-      50%{ transform: translateY(-10px); }
-    }
-    .pill.offer{ bottom: 22px; }
-    .pill.portal{ bottom: 78px; background: rgba(255,255,255,.10); color:#fff; border:1px solid rgba(255,255,255,.18); backdrop-filter: blur(12px); }
-    .pill.portal:hover{ background: rgba(255,255,255,.16); }
-
-    /* ===== Exclusive section ===== */
-    .section{
-      padding: 18px 8% 100px;
-    }
-    .sec-head{
-      display:flex;
-      align-items:flex-end;
-      justify-content:space-between;
-      gap:18px;
-      margin-bottom: 22px;
-    }
-    .sec-title{
-      font-size: 34px;
-      letter-spacing: 8px;
-      font-weight: 900;
-    }
-    .sec-sub{
-      color: var(--muted2);
-      letter-spacing:3px;
-      font-size: 12px;
-      max-width: 420px;
-      text-align:right;
-      line-height:1.4;
-    }
-
-    .exclusive-grid{
-      display:grid;
-      grid-template-columns: repeat(12, 1fr);
-      gap: 18px;
-    }
-
-    .ex-card{
-      grid-column: span 6;
-      min-height: 280px;
-      border-radius: 24px;
-      overflow:hidden;
-      border: 1px solid rgba(255,255,255,.10);
-      background: rgba(255,255,255,.04);
-      position:relative;
-      box-shadow: 0 30px 90px rgba(0,0,0,.55);
-      transform: translateY(24px);
-      opacity: 0;
-      filter: blur(6px);
-      transition: .9s cubic-bezier(.2,.9,.2,1);
-    }
-    .ex-card.show{
-      transform: translateY(0);
-      opacity: 1;
-      filter: blur(0);
-    }
-    .ex-card img{
-      width:100%;
-      height:100%;
-      object-fit:cover;
-      transform: scale(1.06);
-      transition: .75s cubic-bezier(.2,.9,.2,1);
-      filter: saturate(1.05) contrast(1.08);
-    }
-    .ex-card:hover img{
-      transform: scale(1.12);
-    }
-    .ex-card:after{
-      content:"";
-      position:absolute;
-      inset:0;
-      background:
-        linear-gradient(to top, rgba(0,0,0,.78), rgba(0,0,0,.0) 58%),
-        radial-gradient(500px 260px at 30% 0%, rgba(255,255,255,.10), transparent 60%);
-      pointer-events:none;
-    }
-    .ex-label{
-      position:absolute;
-      left:16px;
-      bottom:14px;
-      z-index:2;
-      display:flex;
-      flex-direction:column;
-      gap:6px;
-    }
-    .ex-label b{
-      font-size: 13px;
-      letter-spacing: 4px;
-    }
-    .ex-label span{
-      font-size: 12px;
-      color: rgba(255,255,255,.72);
-      letter-spacing: 2px;
-    }
-
-    .ex-cta{
-      margin-top: 18px;
-      display:flex;
-      gap:12px;
-      flex-wrap:wrap;
-    }
-
-    /* ===== Footer ===== */
-    footer{
-      padding: 22px 8% 60px;
-      color: rgba(255,255,255,.35);
-      letter-spacing:2px;
-      font-size: 12px;
-      text-align:center;
-    }
-
-    /* ===== Responsive ===== */
-    @media (max-width: 820px){
-      header{ padding:14px 14px; }
-      nav a{ padding:10px 10px; margin-left:0; }
-      .hero{ padding: 104px 6% 40px; }
-      .hero-card{ padding: 34px 20px; }
-      .sec-sub{ text-align:left; max-width: 520px; }
-      .sec-head{ align-items:flex-start; flex-direction:column; }
-      .ex-card{ grid-column: span 12; min-height: 260px; }
-    }
-  </style>
+/* ===== FOOTER ===== */
+footer{
+  padding:40px;
+  text-align:center;
+  color:rgba(255,255,255,.35);
+  font-size:12px;
+  letter-spacing:2px;
+}
+</style>
 </head>
 
 <body>
-  <div class="ambient"></div>
-  <div class="vignette"></div>
 
-  <header>
-    <div class="brand">
-      <img src="logo.jpg" alt="Miranda Flow Logo">
-      <div>
-        <div class="name">BOUTIQUE</div>
-        <span class="sub">MIRANDA FLOW</span>
-      </div>
+<header>
+  <div class="brand">
+    <img src="logo.jpg">
+    <div class="text">
+      <b>BOUTIQUE</b>
+      MIRANDA FLOW
     </div>
+  </div>
+  <nav>
+    <a href="#top">INICIO</a>
+    <a href="producto.html">TIENDA</a>
+    <a href="carrito.html">CARRITO</a>
+  </nav>
+</header>
 
-    <nav>
-      <a href="#top">INICIO</a>
-      <a href="#exclusive">EXCLUSIVE</a>
-      <a href="producto.html">TIENDA</a>
-      <a href="carrito.html">CARRITO</a>
-    </nav>
-  </header>
-
-  <!-- Floating: portal Prendas + offer -->
-  <a class="pill portal" href="prendas.html" title="Entrar al ecosistema de Prendas">
-    ✨ <small>PRÉNDAS</small>
-  </a>
-  <div class="pill offer" id="offerPill" title="Oferta">
-    🎁 <small>-20% HOY</small>
+<section class="hero" id="top">
+  <div class="logo-bg">
+    <img src="logo.jpg">
   </div>
 
-  <main id="top">
-    <section class="hero">
-      <div class="logo-back">
-        <img src="logo.jpg" alt="">
-      </div>
+  <div class="hero-card">
+    <small>BOUTIQUE / PRESENCIA / NIVEL</small>
+    <h1>MIRANDA<br>FLOW</h1>
+    <p>
+      Prendas con presencia.  
+      Estilo que se impone sin hablar.  
+      Esto no es una tienda, es un ecosistema.
+    </p>
 
-      <div class="hero-card">
-        <div class="kicker">BOUTIQUE / PRESENCIA / NIVEL</div>
-        <h1>MIRANDA<br>FLOW</h1>
-        <p class="tag">
-          Prendas con presencia. Estilo que se impone sin hablar.
-          <br>Esto no es “una tienda”: es una entrada a un ecosistema.
-        </p>
+    <div class="hero-actions">
+      <a href="prendas.html" class="btn primary">ENTRAR A PRÉNDAS →</a>
+      <a href="#exclusive" class="btn">VER EXCLUSIVE ↓</a>
+    </div>
+  </div>
+</section>
 
-        <div class="cta">
-          <a class="btn primary" href="prendas.html">ENTRAR A PRÉNDAS →</a>
-          <a class="btn" href="#exclusive">VER EXCLUSIVE ↓</a>
-          <a class="btn" href="producto.html">ABRIR TIENDA →</a>
-        </div>
-      </div>
-    </section>
+<section class="section" id="exclusive">
+  <h2>EXCLUSIVE</h2>
+  <p>Selección visual premium de muestra.</p>
 
-    <section class="section" id="exclusive">
-      <div class="sec-head">
-        <div class="sec-title">EXCLUSIVE</div>
-        <div class="sec-sub">
-          Drop visual de muestra.  
-          Fotos reales o demo, pero con presencia.
-        </div>
-      </div>
+  <div class="grid">
+    <div class="card"><img src="exclusive-1.jpg"></div>
+    <div class="card"><img src="exclusive-2.jpg"></div>
+    <div class="card"><img src="exclusive-3.jpg"></div>
+    <div class="card"><img src="exclusive-4.jpg"></div>
+  </div>
+</section>
 
-      <div class="exclusive-grid">
-        <a class="ex-card" href="producto.html" aria-label="Exclusive 1">
-          <img src="exclusive-1.jpg" alt="Exclusive 1">
-          <div class="ex-label">
-            <b>EXCLUSIVE 01</b>
-            <span>Edición limitada</span>
-          </div>
-        </a>
+<footer>
+  © 2025 Miranda Flow Boutique
+</footer>
 
-        <a class="ex-card" href="producto.html" aria-label="Exclusive 2">
-          <img src="exclusive-2.jpg" alt="Exclusive 2">
-          <div class="ex-label">
-            <b>EXCLUSIVE 02</b>
-            <span>Selección premium</span>
-          </div>
-        </a>
+<script>
+const cards=document.querySelectorAll('.card');
+const io=new IntersectionObserver(e=>{
+  e.forEach(x=>{
+    if(x.isIntersecting){
+      x.target.classList.add('show');
+      io.unobserve(x.target);
+    }
+  })
+},{threshold:.2});
+cards.forEach(c=>io.observe(c));
+</script>
 
-        <a class="ex-card" href="producto.html" aria-label="Exclusive 3">
-          <img src="exclusive-3.jpg" alt="Exclusive 3">
-          <div class="ex-label">
-            <b>EXCLUSIVE 03</b>
-            <span>Drop del día</span>
-          </div>
-        </a>
-
-        <a class="ex-card" href="producto.html" aria-label="Exclusive 4">
-          <img src="exclusive-4.jpg" alt="Exclusive 4">
-          <div class="ex-label">
-            <b>EXCLUSIVE 04</b>
-            <span>Top selection</span>
-          </div>
-        </a>
-      </div>
-
-      <div class="ex-cta">
-        <a class="btn primary" href="prendas.html">IR AL PORTAL PRÉNDAS →</a>
-        <a class="btn" href="producto.html">ENTRAR A TIENDA →</a>
-      </div>
-    </section>
-
-    <footer>
-      © 2025 Miranda Flow Boutique. Todos los derechos reservados.
-    </footer>
-  </main>
-
-  <script>
-    // Animación PRO cuando entran las cards (Exclusive)
-    const cards = document.querySelectorAll('.ex-card');
-    const io = new IntersectionObserver((entries)=>{
-      entries.forEach(e=>{
-        if(e.isIntersecting){
-          e.target.classList.add('show');
-          io.unobserve(e.target);
-        }
-      });
-    }, { threshold: 0.18 });
-
-    cards.forEach(c => io.observe(c));
-
-    // Pill oferta: micro feedback al tocar
-    const offer = document.getElementById('offerPill');
-    offer.addEventListener('click', ()=>{
-      offer.style.transform = "scale(0.95)";
-      setTimeout(()=> offer.style.transform = "", 160);
-    });
-  </script>
 </body>
 </html>
